--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
                 <section class="section">
                         <h2 class="visually-hidden">Наши преимущества</h2>
                         <ul class="list-advantages list-decoration">
-                            <li>
+                            <li class="item">
                                 <h3 class="hero-second-subtitle">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                                 <p class="hero-second-text">Идейные соображения, а также начало повседневной работы по
                                     формированию позиции.</p>
                             </li>
-                            <li>
+                            <li class="item">
                                 <h3 class="hero-second-subtitle">ПУНКТУАЛЬНОСТЬ</h3>
                                 <p class="hero-second-text">Задача организации, в особенности же рамки и место обучения кадров
                                     влечет за собой.</p>
                             </li>
-                            <li>
+                            <li class="item">
                                 <h3 class="hero-second-subtitle">ПЛАНИРОВАНИЕ</h3>
                                 <p class="hero-second-text">Равным образом консультация с широким активом в значительной степени
                                     обуславливает.</p>
                             </li>
-                            <li>
+                            <li class="item">
                                 <h3 class="hero-second-subtitle">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                                 <p class="hero-second-text">Значимость этих проблем настолько очевидна, что реализация плановых
                                     заданий.</p>
@@ -78,9 +78,9 @@
                 <section class="section">
                         <h2 class="hero-title-s3">Чем мы занимаемся</h2>
                         <ul class="image-list list-decoration">
-                            <li><img src="images/img (1).jpg" alt="печать на клавиатуре" width="370px"></li>
-                            <li><img src="images/img (2).jpg" alt="ноутбук и телефон в руке" width="370px"></li>
-                            <li><img src="images/img (3).jpg" alt="цветной гексагон в руке" width="370px"></li>
+                            <li class="item"><img src="images/img (1).jpg" alt="печать на клавиатуре" width="370px"></li>
+                            <li class="item"><img src="images/img (2).jpg" alt="ноутбук и телефон в руке" width="370px"></li>
+                            <li class="item"><img src="images/img (3).jpg" alt="цветной гексагон в руке" width="370px"></li>
                         </ul>
                 </section>
             </div>
