--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
                         <li class="item"><button type="button" class="btn-portfolio">Маркетинг</button></li>
                     </ul>
                     
-                    <ul class="project-list list-decoration">
+                    <ul class="project-list">
                         <li class="item">
                             <img src="./images/num7.jpg" alt="ноутбук" width="370">
                             <div class="portfolio-thumb">
