--- a/portfolio.html
+++ b/portfolio.html
@@ -24,16 +24,15 @@
                     <a href="./index.html" class="logo-header"><span class="logo-color">Web</span>Studio</a>
         
                     <ul class="nav-list">
-                        <li class="item"><a href="./index.html" class="link link-color current">Студия</a></li>
-                        <li class="item"><a href="./portfolio.html" class="link link-color">Портфолио</a></li>
+                        <li class="item"><a href="./index.html" class="link link-color">Студия</a></li>
+                        <li class="item"><a href="./portfolio.html" class="link link-color current">Портфолио</a></li>
                         <li class="item"><a href="#contacts" class="link link-color">Контакты</a></li>
                     </ul>
         
                 </nav>
-                <ul class="contacts-list list-decoration">
-                    <li class="item"><a href="tel:+380961111111" class="link-decoration link contacts">+380961111111</a></li>
-                    <li class="item"><a href="mailto:info@devstudio.com"
-                            class="link-decoration link contacts">info@devstudio.com</a></li>
+                <ul class="contacts-list">
+                    <li class="item"><a href="tel:+380961111111" class="link contacts">+380961111111</a></li>
+                    <li class="item"><a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a></li>
                 </ul>
             </div>
         </header>
